Fixing feedback text alignment on mobile buttons

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -78,4 +78,8 @@
     line-height: var(--line-height-button);
     height: var(--line-height-button);
   }
+
+  .root.--small .feedback {
+    line-height: var(--line-height-button);
+  }
 }
